[gd_scene load_steps=8 format=3 uid="uid://711xjl1321ba"]

[ext_resource type="Script" path="res://script/lobby.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b5yinge0hdoea" path="res://scenes/homebkgnd.tscn" id="2"]
[ext_resource type="Script" path="res://scenes/ServerList.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://j2ny4o34p6vf" path="res://objects/Label.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://btifvcr6nehds" path="res://meta/vboxmenu.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://ctpb3c81uaka6" path="res://objects/Button.tscn" id="6"]
[ext_resource type="Script" path="res://scenes/ServerNameEnter.gd" id="7"]

[node name="lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="action-ball-field-274506" parent="." instance=ExtResource("2")]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.588235)

[node name="ServerList" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.588235)

[node name="Button" type="Button" parent="ServerList"]
layout_mode = 0
text = "refresh"

[node name="List" type="ColorRect" parent="ServerList"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.588235)
script = ExtResource("3")

[node name="Label" parent="." instance=ExtResource("4")]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
text = "Lobby"

[node name="menu" parent="." instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Host" parent="menu" instance=ExtResource("6")]
layout_mode = 2
text = "Host"

[node name="Join" parent="menu" instance=ExtResource("6")]
layout_mode = 2
text = "Join"

[node name="Back" parent="menu" instance=ExtResource("6")]
layout_mode = 2
text = "Quit"

[node name="ServerNameEnter" type="Control" parent="."]
visible = false
anchors_preset = 0
script = ExtResource("7")

[node name="serverName" type="LineEdit" parent="ServerNameEnter"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
placeholder_text = "Server Name"
max_length = 16

[node name="enter" type="Button" parent="ServerNameEnter"]
layout_mode = 0
text = "Ok"

[connection signal="button_down" from="ServerList/Button" to="ServerList/List" method="_on_Button_button_down"]
[connection signal="button_down" from="menu/Host" to="." method="_on_Host_button_down"]
[connection signal="button_down" from="menu/Join" to="." method="_on_Join_button_down"]
[connection signal="button_down" from="menu/Back" to="." method="_on_Back_button_down"]
[connection signal="button_down" from="ServerNameEnter/enter" to="ServerNameEnter" method="_on_enter_button_down"]
